Added debug toggle

--- a/configuration.json
+++ b/configuration.json
@@ -39,5 +39,15 @@
       "label": "Update User ID if it doesn't match naming convention",
       "required": false
     }
+  },
+  {
+    "key": "isDebug",
+    "type": "checkbox",
+    "defaultValue": false,
+    "templateOptions": {
+      "label": "Toggle debug logging",
+      "description": "When toggled, debug logging will be displayed",
+      "required": false
+    }
   }
 ]
