Fix: Added create action for UsId

--- a/fieldMapping.json
+++ b/fieldMapping.json
@@ -310,6 +310,7 @@
       "MappingActions": [
         {
           "MapForActions": [
+            "Create",
             "Update"
           ],
           "MappingMode": "Complex",
