--- a/configuration.json
+++ b/configuration.json
@@ -52,13 +52,13 @@
     }
   },
   {
-    "key": "updateOnUpdate",
+    "key": "onlyUpdateOnCorrelate",
     "type": "checkbox",
     "defaultValue": false,
     "templateOptions": {
-      "label": "Update on update",
+      "label": "Only update on correlate",
       "required": false,
-      "description": "When toggled, if the mapped data differs from data in AFAS, the AFAS user will be updated when a update is triggerd"
+      "description": "When toggled, the AFAS user will only be updated when the account is correlated"
     }
   },
   {
