New powershell connector (PSv2) (#14)
* Feat: new powershell connector

* Feat: add fieldMapping and updated readme

* Fix: Update Logo URL

* Fix: Added create action for UsId

* Added note for field mapping UsId

* Added <CustomerCode> placeholder in UsId

* feat: added support voor Site/InSi on enable/disable

* fix: updateOnupdate to onlyUpdateOnCorrelate

* Fix: auditlogs exceeded data size limit.

--- a/configuration.json
+++ b/configuration.json
@@ -42,23 +42,23 @@
     }
   },
   {
-    "key": "createAccount",
+    "key": "createUser",
     "type": "checkbox",
     "defaultValue": false,
     "templateOptions": {
-      "label": "Create account when not found",
+      "label": "Create user when not found",
       "required": false,
-      "description": "When toggled, if the user account is not found, a new AFAS user account will be created in the create action (only in the create action)."
+      "description": "When toggled, if the user account is not found, a new the AFAS user account will be created in the create action (only in the create action)."
     }
   },
   {
-    "key": "updateOnCorrelate",
+    "key": "onlyUpdateOnCorrelate",
     "type": "checkbox",
     "defaultValue": false,
     "templateOptions": {
-      "label": "Update on correlate",
+      "label": "Only update on correlate",
       "required": false,
-      "description": "When toggled, if the mapped data differs from data in AFAS, the AFAS user will be updated in the create action (not just correlated)."
+      "description": "When toggled, the AFAS user will only be updated when the account is correlated"
     }
   },
   {
